namespaces/live.cloud-platform.service.justice.gov.uk/data-platform-app-ccmbpt-analytics-app-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data-platform-app-ccmbpt-analytics-app-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "prod"
    pod-security.kubernetes.io/audit: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "ccmbpt-data-and-analysis"
    cloud-platform.justice.gov.uk/application: "Ccmbpt Analytics App"
    cloud-platform.justice.gov.uk/owner: "systems and monitoring, ccmbpt, access to justice analytical business partnering, d&a: ccmanalytics_asd@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/ccmbpt-analytics-app"
    cloud-platform.justice.gov.uk/team-name: "ccmbpt-analytics-admin-team"
    cloud-platform.justice.gov.uk/review-after: ""
